# toggl-calender-connector

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  cli.py  google_calendar.py  main.py  toggl_client.py
src/clients/: __init__.py  google_client.py  toggl_client.py
src/commands/: calendars.py  current.py  sync.py  version.py
src/core/: main.py
src/handlers/: menu.py
src/theme/: cyberpunk.py
src/utils/: __init__.py  formatter.py  google_calendar.py
src/utils/google_calendar/: __init__.py  calendars.py  events.py  settings.py
